[package]
name = "rs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7" }
axum-extra = { version = "0.9.3", features = ["form", "query", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
ethers = "2.0.14"
firebase-auth = { git = "https://github.com/a-pechenyi/firebase-auth", branch = "fix-update-public-keys", features = [
  "axum",
] }
futures-util = { version = "0.3.30", features = ["alloc"] }
http = "1.1.0"
is_empty = "0.2.0"
iso3166 = "1.0.1"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
serde_repr = "0.1.19"
serde_with = { version = "3.8.1", features = ["json", "chrono_0_4", "macros"] }
sqlx = { version = "0.7.4", features = [
  "rust_decimal",
  "chrono",
  "json",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = [
  "macros",
  "sync",
  "time",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", 'trace'] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
